# Dofiles_Hyprland

./: .gitignore  .luarc.json  LICENSE  README.md
configs/cava/: config.conf
configs/hypr/hyprland_settinigs/: autostart.conf  decoration.conf  hypridle.conf  hyprlock.conf  hyprpaper.conf  input.conf  keybinds.conf  monitor.conf  source.conf  workspace.conf
configs/hypr/swaync/: config.json
configs/hypr/waybar/: config.json  (+2 more)
configs/nvim/: backup.txt  init.lua  lazy-lock.json
configs/tmux/: .tmux.conf  README.md
configs/zsh/: starship.toml  zshrc
docs/: code.js  index.html  installention_guide.html
docs/css/: style.css
docs/docker/: Dockerfile
scripts/battery/: battery-check.sh  battery-notification.sh
scripts/screenshot/: screenshot.sh  screenshot_fast.sh
scripts/starship/: pyproject.toml
scripts/swaync/: dnd.sh
system/system_installer/: README.md  pyproject.toml
system/system_installer/mytool/: setup.py
system/system_installer/mytool/cache_files/: config.txt  keyboardru  zshrc.txt
system/system_installer/mytool/config/configuration_yaml/: helpers.yaml  packages.yaml  paths.yaml
system/system_installer/mytool/utils/: configs.py  package.py  setup_steps.py  utils_for_script.py
system/system_installer/mytool/utils/logger/: log.py
system/system_installer/script/: apps.py  configs.py  log.py  setup.py  setup_steps.py  utils_for_script.py
system/system_installer/script/cache_files/: VBOXADIITONS.txt  zshrc_10k.txt
system/system_installer/script/configuration_yaml/: errors_for_script.yaml  helpers.yaml  packages.yaml  paths.yaml
(+26 files in other folders)
